Hack in FunctionsBuilder and updated CoreTools

--- a/NuGet.config
+++ b/NuGet.config
@@ -17,6 +17,12 @@
     <add key="dotnet8" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8/nuget/v3/index.json" />
     <add key="dotnet-libraries" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
     <add key="dotnet9-transport" value="https://dnceng.pkgs.visualstudio.com/public/_packaging/dotnet9-transport/nuget/v3/index.json" />
+    <add key="azfunc-local-worker" value="/Users/captainsafia/git/azure-functions-dotnet-worker/aspire-updates" />
+    <add key="azfunc-local-worker-grpc" value="/Users/captainsafia/git/azure-functions-dotnet-worker/aspire-updates/src/DotNetWorker.Grpc/bin/Release" />
+    <add key="azfunc-local-worker-ext" value="/Users/captainsafia/git/azure-functions-dotnet-worker/aspire-updates/extensions/Worker.Extensions.Abstractions/src/bin/Release" />
+    <add key="azfunc-local-worker-ext-http-asp" value="/Users/captainsafia/git/azure-functions-dotnet-worker/aspire-updates/extensions/Worker.Extensions.Http.AspNetCore/src/bin/Release" />
+    <add key="azfunc-local-worker-ext-http" value="/Users/captainsafia/git/azure-functions-dotnet-worker/aspire-updates/extensions/Worker.Extensions.Http/src/bin/Release" />
+    <add key="azfunc-local-worker-ext-analyzers" value="/Users/captainsafia/git/azure-functions-dotnet-worker/aspire-updates/extensions/Worker.Extensions.Http.AspNetCore.Analyzers/bin/Release" />
   </packageSources>
   <packageSourceMapping>
     <packageSource key="dotnet9-transport">
@@ -24,6 +30,25 @@
     </packageSource>
     <packageSource key="dotnet-public">
       <package pattern="*" />
+    </packageSource>
+    <packageSource key="azfunc-local-worker">
+      <package pattern="Microsoft.Azure.Functions.Worker" />
+      <package pattern="Microsoft.Azure.Functions.Worker.Core" />
+    </packageSource>
+    <packageSource key="azfunc-local-worker-grpc">
+      <package pattern="Microsoft.Azure.Functions.Worker.Grpc" />
+    </packageSource>
+    <packageSource key="azfunc-local-worker-ext">
+      <package pattern="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" />
+    </packageSource>
+    <packageSource key="azfunc-local-worker-ext-http-asp">
+      <package pattern="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" />
+    </packageSource>
+    <packageSource key="azfunc-local-worker-ext-analyzers">
+      <package pattern="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore.Analyzers" />
+    </packageSource>
+    <packageSource key="azfunc-local-worker-ext-http">
+      <package pattern="Microsoft.Azure.Functions.Worker.Extensions.Http" />
     </packageSource>
     <packageSource key="dotnet8">
       <package pattern="*" />
