--- a/playground/AzureFunctionsEndToEnd/AzureFunctionsEndToEnd.Functions/AzureFunctionsEndToEnd.Functions.csproj
+++ b/playground/AzureFunctionsEndToEnd/AzureFunctionsEndToEnd.Functions/AzureFunctionsEndToEnd.Functions.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
   <!-- HACK: Simulate running the Azure Functions project via `dotnet run` by spawning the host via a run command. -->
   <PropertyGroup>
-    <RunCommand>func</RunCommand>
+    <RunCommand>/Users/captainsafia/git/azure-functions-core-tools/oop-host/tmp/cli/func</RunCommand>
     <RunArguments>start --csharp --verbose</RunArguments>
   </PropertyGroup>
 </Project>
